[package]
name = "robius-open"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
log = { version = "0.4.21", optional = true }

[target.'cfg(target_os = "android")'.dependencies.jni]
version = "0.21.1"
default-features = false

[target.'cfg(target_os = "android")'.dependencies.robius-android-env]
git = "https://github.com/project-robius/robius-android-env"

[target.'cfg(target_os = "ios")'.dependencies.icrate]
version = "0.1.0"
features = ["Foundation", "Foundation_NSString", "Foundation_NSURL"]

[target.'cfg(target_os = "ios")'.dependencies.objc2]
version = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies.icrate]
version = "0.1.0"
features = ["AppKit", "AppKit_NSWorkspace", "Foundation", "Foundation_NSString", "Foundation_NSURL"]

[features]
default = ["android-result"]
android-result = []
log = ["dep:log"]
