[package]
name = "robius-open"
version = "0.1.3"
edition = "2021"
authors = [
    "Klim Tsoutsman <klim@tsoutsman.com>",
    "Kevin Boos <kevinaboos@gmail.com>",
    "Project Robius Maintainers",
]
description = "Rust abstractions for opening URIs on multiple platforms"
documentation = "https://docs.rs/robius-open"
homepage = "https://robius.rs/"
keywords = ["robius", "URI", "open", "URL", "intent"]
categories = ["os", "hardware-support", "api-bindings"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/project-robius/robius-open"

[dependencies]
cfg-if = "1.0.0"
log = { version = "0.4", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", default-features = false }
robius-android-env = "0.2.0"

[target.'cfg(target_os = "ios")'.dependencies]
block2 = "0.6.1"
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", default-features = false, features = ["alloc", "NSDictionary", "NSString", "NSURL"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit    = { version = "0.3.1", default-features = false, features = ["NSWorkspace"] }
objc2-foundation = { version = "0.3.1", default-features = false, features = ["alloc", "NSString", "NSURL"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.54.0"
features = [ "Foundation", "System" ]

[features]
default = ["android-result"]
android-result = []
log = ["dep:log"]
